--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "homepage": "https://github.com/ArtemGrinn/web-rtc#readme",
   "dependencies": {
+    "express": "^4.17.1",
     "ws": "^7.4.4"
   },
   "scripts": {
